--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Build
         run: cargo build --release
 
+      - name: Run tests
+        run: cargo test --release
+
   test-python:
     runs-on: ubuntu-latest
     steps:
