Add tracing for structured logging
Replace eprintln! with tracing macros for proper structured logging.
This allows users to control log levels and integrate with their own
logging setup.

Changes:
- Add tracing dependency
- Add debug! logs throughout portal flow for troubleshooting
- Add info! log on successful completion
- Replace eprintln! with error! for failures
- Add uv.lock to .gitignore

Closes #9

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
 tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
 parking_lot = "0.12"
 thiserror = "2"
+tracing = "0.1"
